spacing fix

--- a/src/pages/custom.css
+++ b/src/pages/custom.css
@@ -81,6 +81,10 @@ dd {
   margin: 0;
 }
 
+.logo-row ul {
+  padding-left: 0;
+}
+
 .logo-row ul li {
   list-style-type: none;
 }
